fix: fix issue where fully expanded menu items overlap wtih each other.

--- a/src/app/modules/nav/menu/menu.component.css
+++ b/src/app/modules/nav/menu/menu.component.css
@@ -42,7 +42,6 @@
 .ml-menu__list-item {
   display: flex;
   flex-direction: column;
-  min-height: 44px;
 }
 
 .ml-menu__list-link {
